--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
   "name": "reactions",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "A library of methods for creating function (context, next), where next is a function (error, result)",
   "main": "src/reactions.js",
   "scripts": {
     "test": "jasmine-node test/"
   },
   "author": "Boris Filipov, Valeri Bogdanov",
-  "license": "MIT"
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/vbogdanov/reactions.git"
+  }
 }
