jsdoc added to the project... the name of the variable to return needs to be 'exports' for jsdoc to work

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "url": "git://github.com/vbogdanov/reactions.git"
   },
   "devDependencies": {
-    "jasmine-node": "~1.11.0"
+    "jasmine-node": "~1.11.0",
+    "jsdoc": "~3.3.0-alpha2"
   }
 }
